fixed overflow on iOS

--- a/components/common-styles/_global.scss
+++ b/components/common-styles/_global.scss
@@ -17,6 +17,7 @@ body,
 html {
   margin: 0;
   overflow-x: hidden;
+  position: relative;
   padding: 0;
 }
 
